Changed Data model

--- a/handlebars/layout.hbs
+++ b/handlebars/layout.hbs
@@ -13,7 +13,7 @@
       </li>
     </ul><!--
     --><ul class="nav-actions-right">
-      <li id='nav_add_board'><i class="fa fa-plus fa-flip-horizontal fa-lg" aria-hidden="true"></i></li>
+      <li id='nav_add_board'><span title="Clear all boards"><i class="fa fa-trash fa-flip-horizontal fa-lg" aria-hidden="true"></i></span></li>
     </ul>
   </nav>
 </header>
