Search functionality added

--- a/handlebars/layout.hbs
+++ b/handlebars/layout.hbs
@@ -1,22 +1,20 @@
-<header>
-  <nav class='navbar'>
-    <div class="logo">
-      <a href="#" class='brand'><span><i class="fa fa-trello fa-lg fa-pulse" aria-hidden="true"></i></span>BOARDZ</a>
-    </div>
-    <ul class="nav-actions-left">
-      <li id='list_boards'><i class="fa fa-trello fa-rotate-90 fa-lg" aria-hidden="true"></i>&nbsp Boards</li>
-      <li id='nav_search'>
-        <form id="nav_search_form" method='get' action='#'>
+<nav class='navbar'>
+  <div class="logo">
+    <a href="#" class='brand'><span><i class="fa fa-trello fa-lg fa-pulse" aria-hidden="true"></i></span>BOARDZ</a>
+  </div>
+  <ul class="nav-actions-left">
+    <li id='list_boards'><i class="fa fa-trello fa-rotate-90 fa-lg" aria-hidden="true"></i>&nbsp <span>Boards</span></li>
+    <li id='nav_search'>
+      <form id="nav_search_form" method='get' action='#'>
+        <div>
           <input type='text' name='search_term' id='search_term' />
-        </form>
-        <i class="fa fa-search fa-flip-horizontal fa-lg" aria-hidden="true"></i>
-      </li>
-    </ul><!--
-    --><ul class="nav-actions-right">
-      <li id='nav_add_board'><span title="Clear all boards"><i class="fa fa-trash fa-flip-horizontal fa-lg" aria-hidden="true"></i></span></li>
-    </ul>
-  </nav>
-</header>
-<main>
-</main>
-
+          <i class='fa fa-times-thin'></i>
+        </div>
+      </form>
+      <i class="fa fa-search fa-flip-horizontal fa-lg" aria-hidden="true"></i>
+    </li>
+  </ul><!--
+  --><ul class="nav-actions-right">
+    <li id='nav_add_board'><span title="Clear all boards"><i class="fa fa-trash fa-flip-horizontal fa-lg" aria-hidden="true"></i></span></li>
+  </ul>
+</nav>
