--- a/handlebars/board_index.hbs
+++ b/handlebars/board_index.hbs
@@ -1,2 +1,2 @@
-<a href="boards?board={{id}}">{{name}}</a>
+<a href="board/{{id}}">{{name}}</a>
 <i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
