--- a/handlebars/layout.hbs
+++ b/handlebars/layout.hbs
@@ -1,6 +1,6 @@
 <nav class='navbar'>
   <div class="logo">
-    <a href="#" class='brand'><span><i class="fa fa-trello fa-lg fa-pulse" aria-hidden="true"></i></span>BOARDZ</a>
+    <a href="/index.html" class='brand'><span><i class="fa fa-trello fa-lg fa-pulse" aria-hidden="true"></i></span>BOARDZ</a>
   </div>
   <ul class="nav-actions-left">
     <li id='list_boards'><i class="fa fa-trello fa-rotate-90 fa-lg" aria-hidden="true"></i>&nbsp <span>Boards</span></li>
