--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -924,7 +924,7 @@ div#card_shown{
   font-size: 20px;
   line-height: 20px;
   font-weight: normal;
-  color: #aaaaaa;;
+  color: #aaaaaa;
 }
 
 #card_show_left h2{
@@ -1086,7 +1086,7 @@ h2[contenteditable='true']:focus{
 li.ui-sortable-placeholder {
   visibility: visible !important;
   background: rgba(0, 0, 0, 0.2) !important;
-  border-radius': 5px !important;
+  border-radius: 5px !important;
   border: 2px #888888 dashed !important;
 }
 
