change card name

--- a/handlebars/card_show.hbs
+++ b/handlebars/card_show.hbs
@@ -6,7 +6,7 @@
     <section id='card_info'>
       <div id='card_name'>
         <i class="fa fa-trello fa-rotate-90 fa-lg" aria-hidden="true"></i>
-        <h2 contenteditable='true'>{{card.name}}</h2>
+        <h2 contenteditable='true' tabindex='-1'>{{card.name}}</h2>
         <h6>in list <span>{{list.name}}</span></h6>
       </div>
       <div id='card_labels'>
